Learning the basics of javascript

--- a/HTML/first.html
+++ b/HTML/first.html
@@ -3,28 +3,15 @@
 <html>
 
 <head>
-    <title>My first website</title>
+    <title>Aniwave </title>
 </head>
 <body>
-
+    
     <!--This is the best website ever-->
     
-    <h1>This is my website</h1>
-    <hr>
-    <h1>I like pizza!</h1>
-    <br>
-    <h2>I like pizza!</h2>
-    <br>
-    <h3>I like pizza!</h3>
-    <br>
-    <h4>I like pizza!</h4>
-    <br>
-    <h5>I like pizza!</h5>
-    <br>
-    <h6>I like pizza!</h6>
-    <br>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat laboriosam, ut rem eius illum odit delectus! Repellat debitis error tempora velit? Magnam delectus numquam temporibus ipsa, exercitationem mollitia magni consequuntur.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum ducimus fuga laborum numquam, debitis corporis inventore repudiandae consectetur earum ea praesentium vero quia voluptate harum soluta nobis repellendus dolorum in?</p>
+    <h1 style="text-align: center;">  Latest Anime News Posted Here </h1>
+ 
+    <h1>Under Construction</h1>
 </body>
 
 </html>
