--- a/HTML/image.html
+++ b/HTML/image.html
@@ -8,5 +8,13 @@
     <a href="https://en.wikipedia.org/wiki/Shrek">
     <img src="Shrek.png" height="300" alt="This is a picture of Shrek" title="Shrek is shrexy">
     </a>
+
+    <form action="action_page.php" method="POST">
+
+      
+        <label for="fname">first name:</label>
+        <input type="text" id="fname" name="fname" placeholder="Spongebob" required>
+    </form>
+        
 </body>
 </html>
