--- a/JS/hello.html
+++ b/JS/hello.html
@@ -11,6 +11,6 @@
     <p id="p1"></p>
     <p id="p2"></p>
     <p id="p3"></p>
-    <script src="logical.js"></script>
+    <script src="strings.js"></script>
 </body>
 </html>
