--- a/projects/index.html
+++ b/projects/index.html
@@ -1,16 +1,21 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
     
-    <div></div>
-    <script src="html.js"></script>
-</body>
+    <div id="clock-container">
+        <div id="clock">23:28:00</div>
+        
+    </div>
 
+    <script src="index.js"></script>
+</body>
 </html>
+
